app/styles/templates/items/_new.scss
.new-item-section {

  .input-error {
    background: #f46769;
    color: white;
    padding: 0.2rem;
    display: none;

    @media #{$small-only} {
      font-size: 0.65rem;
    }
  }

  .form__control.form__control--error .input-error {
    display: block;
  }

  .description-block .form__control.form__control--error .input-error {
    margin-top: -2%;
  }

  .row {
    margin-top: 0.5rem !important;
    @media #{$small-only} {
      margin-right: 0rem !important;
    }
  }

  .item-label {
    line-height: 1.8rem;
  }

  .dimension-row {
    .value {
      padding: 0;

      input {
        width: 75%;
        display: inline-block;
        padding-left: 1.5rem !important;
      }

      span {
        margin-left: 0.1rem;
      }

      span.input_text {
        position: absolute;
        font-size: 0.8rem;
        color: white;
        line-height: 1.8rem;
        padding-left: 0.1rem;
      }
    }

    .value.length {
      padding-left: 0.3125rem;
    }

    .value.height input {
      width: 93%
    }
  }

  .quality-row {
    span.input_text {
      position: absolute;
      font-size: 0.8rem;
      color: white;
      line-height: 1.8rem;
      padding-left: 0.5rem;
      z-index: 10;
    }

    .grade select {
      padding-left: 3.5rem !important;
    }

    .condition select {
      padding-left: 4.8rem !important;
    }
  }

  input, select {
    padding: 0 0.5rem;
    background: #002352 !important;
    border: 1px solid $tabbar-menu-icon-color !important;
    color: white;
    height: 1.8rem !important;
  }

  textarea {
    margin: 0;
    max-width: 100%;
    padding: 0.3rem 0.5rem;
    background: #002352 !important;
    border: 1px solid $tabbar-menu-icon-color !important;
    color: white;
    padding-right: 1.5rem;
  }

  .remove-text{
    position: absolute;
    right: 3%;
    font-size: 1rem;
    padding: 0.4rem 0.3rem;
    cursor: pointer;
  }

  .image-box-row {
    input, .input-error {
      width: 89%;
    }
  }

  .image-box {
    float: right;

    margin-top: 0.5rem;
    margin-right: 0.4rem;
    background-color: #334f75;
    text-align: center;
    position: absolute;

    height: 4.1rem;

    right: 18.7%;
    width: 8%;
    font-size: 0.8rem;
    z-index: 100;

    @media #{$medium-only} {
      width: 12%;
      right: 0;
    }

    @media #{$small-only} {
      width: 21%;
      right: 0;
      font-size: 0.68rem;
      padding-top: 0.3rem;
    }

    i {
      font-size: 1.5rem;
      padding: 0.5rem 1rem 0.2rem;
      width: 100%;
    }

    img {
      margin-top: -0.3rem;
      height: 4.1rem;
      width: 5rem;
    }
  }

  .scan-icon i {
    color: $tabbar-menu-icon-color;
    font-size: 1.5rem;
    padding: 0.15rem 0.4rem;
  }

  .inventory-number {
    color: $tabbar-menu-icon-color;
    line-height: 1.8rem;
    font-size: 0.8rem;

    input {
      width: 80%;
      display: inline-block;
    }

    a.options-link {
      float: right;
      font-size: 1.5rem;
      padding: 0 0.7rem;
      color: $tabbar-menu-icon-color !important;
    }
  }
}

.location-icon {
  position: absolute;
  right: 1rem;
  top: 0.45rem;
  color: #a3aab6;
  @media #{$small-only} {
    top: 0.5rem;
  }
}

.new-item-nav {
  margin-bottom: 0;

  .tab-bar-section {
    @media #{$large-only} {
      position: relative;
    }
  }
}

.options_menu_list {
  width: 12rem;
  margin-left: -6rem;
  background-color: #002136;
  position: absolute;
  z-index: 100;
  right: -5%;

  @media #{$small-only} {
    width: 10.5rem;
    margin-left: -5rem;
  }

  /* box-shadow style */
  -webkit-box-shadow: -8px 8px 25px 1px rgba(0,0,0,0.75);
  -moz-box-shadow: -8px 8px 25px 1px rgba(0,0,0,0.75);
  box-shadow: -8px 8px 25px 1px rgba(0,0,0,0.75);

  .option_menu {
    padding: 0 1rem;
    line-height: 2.8rem;

    i {
      margin-right: 0.5rem;
      color: $tabbar-menu-icon-color;
    }
  }

  a {
    float: none;

    @media #{$small-only} {
      font-size: 0.85rem;
    }
  }
}

.hide_image_loading{
  display: none;
  div {
    @media #{$small-only} {
      font-size: 1.2rem;
    }
    a {
      color: $medium-blue !important;
      text-decoration: underline;
      @media #{$small-only} {
        font-size: 1rem;
      }
    }
  }
}

.loading-image-indicator {
  z-index: 1000;
  position:fixed;
  width:100%;
  height:100%;
  top:0px;
  left:0px;
  background-color: rgba(0, 0, 0, 0.5);
  > div {
    position:fixed;
    top:50%;
    left:0px;
    width: 100%;
    margin-top: -20px;
    text-align:center;
    font-size: 2.0em;
    color: white;
  }
}

